# YuNote

./: .gitignore  ARCHITECTURE.md  README.md  main.py  pyproject.toml
app/: config.py
app/common/: config.py  signal_bus.py
app/components/: ChunkConcurrencySettingDialog.py  FasterWhisperSettingWidget.py  MySettingCard.py  PromptTemplateEditDialog.py  PromptTemplateEditorCard.py  SummarySettingsDialog.py  TranscriptionSettingDialog.py  WhisperAPISettingWidget.py
app/core/: entities.py  task_factory.py
app/core/asr/: asr_data.py  chunked_asr.py  elevenlabs.py  faster_whisper.py  transcribe.py  whisper_api.py  whisper_cpp.py
app/core/notes/: __init__.py  exporter.py  note_manager.py
app/core/summary/: summarizer.py
app/core/utils/: audio_utils.py  note_id.py  platform_utils.py  subprocess_helper.py
app/thread/: summary_thread.py  transcribe_thread.py
app/view/: fluent_setting_blocks.py  history_interface.py  home_interface.py  mac_styles.py  main_window.py  note_formatting.py  note_interface.py  setting_interface.py  ui_helpers.py
docs/en/: index.md
docs/guide/: getting-started.md
exports/: bj.md  bj.txt
resource/subtitle_style/: default.json  default.txt
